--- a/src/components/PersonList.module.css
+++ b/src/components/PersonList.module.css
@@ -1,19 +1,4 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  width: 100%;
-}
-
-.card-container {
+.cardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
@@ -28,12 +13,12 @@
   margin-inline: auto;
 }
 @media (max-width: 900px) {
-  .card-container {
+  .cardContainer {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (max-width: 600px) {
-  .card-container {
+  .cardContainer {
     grid-template-columns: 1fr;
   }
 }
